--- a/abschlussquiz/vercel.json
+++ b/abschlussquiz/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "https://quiz-green.vercel.app/" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
